src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__import_cycle_no_path.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ╭──────◀───────────────◀──────╮                                    "
"             ╰─╮                         ╭─╯                                    "
" ╭───Start >───┴─AAA─CCC─TTT─GGG─ACT─CTA─┴────> End──╮                          "
" │                                                   │                          "
" ╰─◀───────────────◀───────────────◀───────────────◀─╯                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
