src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__import_cycle_with_path.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"         Start >───┬──TTT─GGG─ACT─CTA────╮                                      "
"                 ╭─╯                     │                                      "
" ╭─▶─AAA───CCC───┴───> End               │                                      "
" │                                       │                                      "
" ╰───◀───────────────◀───────────────◀───╯                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
