src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__import_library_affix.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ╭─TCTAG...CTAG─╮                                                   "
"             │              │                                                   "
"             ├─TCTAG...CTAG─┤                                                   "
"             │              │                                                   "
"             ├─TCTAG...CTAG─┤                                                   "
"             │              │                                                   "
"             ├─TCTAG...CTAG─┼─ATGAG...GTAA─╮                                    "
"     Start >─┤              │              ├─> End                              "
"             ├─TCTAG...CTAG─┼─ATGCG...TTAA─╯                                    "
"             │              │                                                   "
"             ├─TCTAG...CTAG─┤                                                   "
"             │              │                                                   "
"             ├─TCTAG...CTAG─┤                                                   "
"             │              │                                                   "
"             ╰─TCTAG...CTAG─╯                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
