src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__import_library_single_column.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ╭─TAAT─╮                                                           "
"             │      │                                                           "
"     Start >─┼─CAAC─┼─> End                                                     "
"             │      │                                                           "
"             ╰─AAAA─╯                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
