src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__import_library_two_columns.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ╭─TAAT─┬─TAAT─╮                                                    "
"             │      │      │                                                    "
"     Start >─┼─CAAC─┼─CAAC─┼─> End                                              "
"             │      │      │                                                    "
"             ╰─AAAA─┴─AAAA─╯                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
