src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__update_fasta_with_vcf.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     Start >─ATCGA...GAGA─> End                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
