src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__update_with_gfa_walk_diff.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ╭─AAAAAAAA─╮                                                    "
"     Start >─AT─┤          ├─TCGAT...GAGA─> End                                 "
"                ╰───CGA────╯                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
