src/views/testing/snapshots/r#gen__views__testing__snapshot_tests__update_with_library_pool.snap
---
source: src/views/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                     ╭──────GATCG...ATCG──────╮                                 "
"                     │                        │                                 "
"                     │                        │                                 "
"                     ├─────TAAT─────┬─ATGATAA─┤                                 "
"     Start >─ATCGATC─┤              │         ├─GGAAC...GAGA─> End              "
"                     ├─────CAAC─────┼─ATGTTAA─┤                                 "
"                     │              │         │                                 "
"                     ╰─────AAAA─────┴─ATGCTAA─╯                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
